--- a/scss/fxj/_views.scss
+++ b/scss/fxj/_views.scss
@@ -76,7 +76,8 @@
 }
 @media (max-width: $screen-sm-min) {
   .col{
-    .views-field-field-imagen {
+    .views-field-field-imagen,
+    .views-field-field-image {
       box-sizing: border-box;
       float: left;
       overflow: hidden;
@@ -100,13 +101,71 @@
 }
 @media (min-width: $screen-sm-min) {
    .col{
-    .views-field-field-imagen {
+    .views-field-field-imagen,
+    .views-field-field-image {
+      height: 100px;
       margin-bottom: -30px;
+      overflow: hidden;
     }
     .views-field-field-tipo {
       left: 10px;
       position: relative;
       top: -10px;
     }
+  }
+}
+
+//collaborate
+.view-colaborate {
+
+  .view-colaborate-fields {
+    background-color: $brand-tertiary;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    padding: 20px;
+
+    a {
+      color: white;
+    }
+
+    p {
+      font-size: 20px;
+      font-weight: 300;
+      padding: 15px 0 0 0;
+    }
+    .fontawesome-icon {
+      border-radius: 20px;
+      border: 1px solid white;
+      display: inline-block;
+      font-size: 16px;
+      height: 40px;
+      padding-top: 9px;
+      width: 40px;
+    }
+  }
+
+
+}
+
+@media (min-width: $screen-md-min) {
+  .view-colaborate {
+
+    .view-colaborate-fields {
+      font-size: 30px;
+
+      p {
+        padding: 30px 0 0 0;
+      }
+
+      .fontawesome-icon {
+        border-radius: 35px;
+        font-size: 30px;
+        height: 70px;
+        padding-top: 14px;
+        width: 70px;
+      }
+    }
+
   }
 }
