--- a/css/style.css
+++ b/css/style.css
@@ -7104,11 +7104,11 @@ button.close {
   .carousel-indicators {
     bottom: 20px; } }
 /* line 14, ../bootstrap/stylesheets/bootstrap/mixins/_clearfix.scss */
-.clearfix:before, .filter-wrapper:before, .region-sticky-footer:before, .view-row-media:before, .clearfix:after, .filter-wrapper:after, .region-sticky-footer:after, .view-row-media:after {
+.clearfix:before, .filter-wrapper:before, #sliding-popup .popup-content:before, .region-sticky-footer:before, .view-row-media:before, .clearfix:after, .filter-wrapper:after, #sliding-popup .popup-content:after, .region-sticky-footer:after, .view-row-media:after {
   content: " ";
   display: table; }
 /* line 19, ../bootstrap/stylesheets/bootstrap/mixins/_clearfix.scss */
-.clearfix:after, .filter-wrapper:after, .region-sticky-footer:after, .view-row-media:after {
+.clearfix:after, .filter-wrapper:after, #sliding-popup .popup-content:after, .region-sticky-footer:after, .view-row-media:after {
   clear: both; }
 
 /* line 12, ../bootstrap/stylesheets/bootstrap/_utilities.scss */
@@ -8296,43 +8296,45 @@ p:last-child,
 
 /* line 2, ../scss/fxj/_footer.scss */
 #sliding-popup {
-  background-color: rgba(252, 248, 227, 0.9);
-  border: 1px solid #faebcc;
-  border-radius: 4px;
+  background: transparent none;
   bottom: 0;
-  color: #8a6d3b;
-  background-image: none;
-  padding: 15px;
-  margin: 20px;
   position: fixed;
-  width: calc(100% - 40px);
-  max-width: 1170px;
-  z-index: 20; }
-  /* line 17, ../scss/fxj/_footer.scss */
+  width: 100%;
+  z-index: 21;
+  text-align: center; }
+  /* line 10, ../scss/fxj/_footer.scss */
   #sliding-popup .popup-content {
+    background-color: rgba(252, 248, 227, 0.9);
+    background-image: none;
+    border: 1px solid #faebcc;
+    border-radius: 4px;
+    color: #8a6d3b;
+    padding: 15px;
+    margin: 0 auto;
+    width: calc(100% - 120px);
     max-width: 1170px; }
-    /* line 19, ../scss/fxj/_footer.scss */
+    /* line 22, ../scss/fxj/_footer.scss */
     #sliding-popup .popup-content #popup-text {
       margin: 0;
       padding: 0;
       width: calc(100% - 70px);
       max-width: 1100px; }
-      /* line 24, ../scss/fxj/_footer.scss */
+      /* line 27, ../scss/fxj/_footer.scss */
       #sliding-popup .popup-content #popup-text p {
         color: #8a6d3b;
         font-size: 12px;
         font-weight: 400;
         margin: 0; }
-      /* line 30, ../scss/fxj/_footer.scss */
+      /* line 33, ../scss/fxj/_footer.scss */
       #sliding-popup .popup-content #popup-text a {
         color: #66512c; }
-    /* line 34, ../scss/fxj/_footer.scss */
+    /* line 37, ../scss/fxj/_footer.scss */
     #sliding-popup .popup-content #popup-buttons {
       padding: 0;
       max-width: 70px;
       margin: 0;
       float: right; }
-      /* line 40, ../scss/fxj/_footer.scss */
+      /* line 43, ../scss/fxj/_footer.scss */
       #sliding-popup .popup-content #popup-buttons .agree-button {
         -webkit-appearance: none;
         background: transparent;
@@ -8344,7 +8346,7 @@ p:last-child,
         margin: 0;
         padding: 0;
         text-shadow: none; }
-        /* line 52, ../scss/fxj/_footer.scss */
+        /* line 55, ../scss/fxj/_footer.scss */
         #sliding-popup .popup-content #popup-buttons .agree-button:after {
           width: 13px;
           height: 13px;
@@ -8355,15 +8357,15 @@ p:last-child,
           font-weight: 300;
           line-height: .9;
           margin-left: 5px; }
-        /* line 63, ../scss/fxj/_footer.scss */
+        /* line 66, ../scss/fxj/_footer.scss */
         #sliding-popup .popup-content #popup-buttons .agree-button:hover, #sliding-popup .popup-content #popup-buttons .agree-button:focus {
           background: inherit;
           text-decoration: underline; }
-      /* line 69, ../scss/fxj/_footer.scss */
+      /* line 72, ../scss/fxj/_footer.scss */
       #sliding-popup .popup-content #popup-buttons .find-more-button {
         display: none; }
 
-/* line 78, ../scss/fxj/_footer.scss */
+/* line 81, ../scss/fxj/_footer.scss */
 .sticky-footer.container-fluid,
 .footer.container-fluid {
   border-top: 1px solid white;
@@ -8373,7 +8375,7 @@ p:last-child,
   max-width: none;
   padding: 0; }
 
-/* line 87, ../scss/fxj/_footer.scss */
+/* line 90, ../scss/fxj/_footer.scss */
 .region-sticky-footer,
 .region-footer {
   max-width: 1170px;
@@ -8381,79 +8383,79 @@ p:last-child,
   margin-left: auto;
   padding: 15px; }
 
-/* line 94, ../scss/fxj/_footer.scss */
+/* line 97, ../scss/fxj/_footer.scss */
 .region-sticky-footer {
   padding: 5px 15px; }
 
-/* line 101, ../scss/fxj/_footer.scss */
+/* line 104, ../scss/fxj/_footer.scss */
 .sticky-footer.container-fluid {
   background-color: #c0392b; }
-/* line 104, ../scss/fxj/_footer.scss */
+/* line 107, ../scss/fxj/_footer.scss */
 .sticky-footer .menu.footer {
   border: 0;
   float: left;
   margin: 0;
   padding: 0; }
-  /* line 111, ../scss/fxj/_footer.scss */
+  /* line 114, ../scss/fxj/_footer.scss */
   .sticky-footer .menu.footer a {
     background-color: #c0392b;
     color: white; }
-    /* line 115, ../scss/fxj/_footer.scss */
+    /* line 118, ../scss/fxj/_footer.scss */
     .sticky-footer .menu.footer a:hover, .sticky-footer .menu.footer a:focus {
       text-decoration: underline; }
-    /* line 120, ../scss/fxj/_footer.scss */
+    /* line 123, ../scss/fxj/_footer.scss */
     .sticky-footer .menu.footer a svg {
       margin-right: 5px; }
-/* line 126, ../scss/fxj/_footer.scss */
+/* line 129, ../scss/fxj/_footer.scss */
 .sticky-footer .block-addtoany {
   float: right;
   position: relative; }
-  /* line 129, ../scss/fxj/_footer.scss */
+  /* line 132, ../scss/fxj/_footer.scss */
   .sticky-footer .block-addtoany .a2a_kit {
     position: relative;
     right: 0;
     bottom: 2em; }
 
-/* line 138, ../scss/fxj/_footer.scss */
+/* line 141, ../scss/fxj/_footer.scss */
 .js .sticky-footer {
   width: 100%; }
-  /* line 141, ../scss/fxj/_footer.scss */
+  /* line 144, ../scss/fxj/_footer.scss */
   .js .sticky-footer.fixed {
     position: fixed;
     bottom: 0px;
     top: auto;
-    z-index: 21; }
+    z-index: 20; }
 
-/* line 152, ../scss/fxj/_footer.scss */
+/* line 155, ../scss/fxj/_footer.scss */
 .footer.container-fluid {
   background-color: #333333; }
-/* line 155, ../scss/fxj/_footer.scss */
+/* line 158, ../scss/fxj/_footer.scss */
 .footer a {
   color: white; }
-/* line 158, ../scss/fxj/_footer.scss */
+/* line 161, ../scss/fxj/_footer.scss */
 .footer h2 {
   font-size: 20px;
   font-weight: 400;
   margin-top: 0; }
-/* line 163, ../scss/fxj/_footer.scss */
+/* line 166, ../scss/fxj/_footer.scss */
 .footer strong {
   font-weight: 400; }
-/* line 166, ../scss/fxj/_footer.scss */
+/* line 169, ../scss/fxj/_footer.scss */
 .footer .block {
   margin: 0 0 15px 0; }
-  /* line 174, ../scss/fxj/_footer.scss */
+  /* line 177, ../scss/fxj/_footer.scss */
   .footer .block:first-of-type img {
     width: 100px; }
-  /* line 178, ../scss/fxj/_footer.scss */
+  /* line 181, ../scss/fxj/_footer.scss */
   .footer .block:last-of-type {
     border-top: 1px solid white;
     padding: 15px 0 0 0; }
 
 @media (min-width: 768px) {
-  /* line 189, ../scss/fxj/_footer.scss */
+  /* line 192, ../scss/fxj/_footer.scss */
   .footer .block:first-child img {
     width: auto; }
-  /* line 193, ../scss/fxj/_footer.scss */
+  /* line 196, ../scss/fxj/_footer.scss */
   .footer .block:last-of-type {
     clear: both;
     float: left;
