--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -1,21 +1,24 @@
 //EU Cookies Compliance
 #sliding-popup {
-
-  background-color: rgba(252, 248, 227, .9);
-  border: 1px solid #faebcc;
-  border-radius: 4px;
+  background: transparent none;
   bottom: 0;
-  color: $alert-warning-text;
-  background-image: none;
-  padding: 15px;
-  margin: 20px;
   position: fixed;
-  width: calc(100% - 40px);
-  max-width: $container-large-desktop;
-  z-index: 20;
+  width: 100%;
+  z-index: 21;
+  text-align: center;
 
   .popup-content {
+    @extend .clearfix;
+    background-color: rgba(252, 248, 227, .9);
+    background-image: none;
+    border: 1px solid #faebcc;
+    border-radius: 4px;
+    color: $alert-warning-text;
+    padding: 15px;
+    margin: 0 auto;
+    width: calc(100% - 120px);
     max-width: $container-large-desktop;
+
     #popup-text {
       margin: 0;
       padding: 0;
@@ -142,7 +145,7 @@
       position: fixed;
       bottom: 0px;
       top: auto;
-      z-index: 21;
+      z-index: 20;
     }
   }
 }
