fix(footer nav): generic style on nav class

--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -104,7 +104,7 @@
   &.container-fluid {
     background-color: $brand-quaternary;
   }
-  .menu.footer {
+  .menu.nav {
     @extend .nav-pills;
     border: 0;
     float: left;
