--- a/css/style.css
+++ b/css/style.css
@@ -4667,16 +4667,16 @@ tbody.collapse.in {
       cursor: default; }
 
 /* line 118, ../bootstrap/stylesheets/bootstrap/_navs.scss */
-.nav-pills > li, .sticky-footer .menu.footer > li {
+.nav-pills > li, .sticky-footer .menu.nav > li {
   float: left; }
   /* line 122, ../bootstrap/stylesheets/bootstrap/_navs.scss */
-  .nav-pills > li > a, .sticky-footer .menu.footer > li > a {
+  .nav-pills > li > a, .sticky-footer .menu.nav > li > a {
     border-radius: 4px; }
   /* line 125, ../bootstrap/stylesheets/bootstrap/_navs.scss */
-  .nav-pills > li + li, .sticky-footer .menu.footer > li + li {
+  .nav-pills > li + li, .sticky-footer .menu.nav > li + li {
     margin-left: 2px; }
   /* line 131, ../bootstrap/stylesheets/bootstrap/_navs.scss */
-  .nav-pills > li.active > a, .sticky-footer .menu.footer > li.active > a, .nav-pills > li.active > a:hover, .sticky-footer .menu.footer > li.active > a:hover, .nav-pills > li.active > a:focus, .sticky-footer .menu.footer > li.active > a:focus {
+  .nav-pills > li.active > a, .sticky-footer .menu.nav > li.active > a, .nav-pills > li.active > a:hover, .sticky-footer .menu.nav > li.active > a:hover, .nav-pills > li.active > a:focus, .sticky-footer .menu.nav > li.active > a:focus {
     color: #fff;
     background-color: #16a085; }
 
@@ -5512,7 +5512,7 @@ a.label:hover, a.label:focus {
     top: 0;
     padding: 1px 5px; }
   /* line 41, ../bootstrap/stylesheets/bootstrap/_badges.scss */
-  .list-group-item.active > .badge, .nav-pills > .active > a > .badge, .sticky-footer .menu.footer > .active > a > .badge {
+  .list-group-item.active > .badge, .nav-pills > .active > a > .badge, .sticky-footer .menu.nav > .active > a > .badge {
     color: #16a085;
     background-color: #fff; }
   /* line 47, ../bootstrap/stylesheets/bootstrap/_badges.scss */
@@ -5522,7 +5522,7 @@ a.label:hover, a.label:focus {
   .list-group-item > .badge + .badge {
     margin-right: 5px; }
   /* line 55, ../bootstrap/stylesheets/bootstrap/_badges.scss */
-  .nav-pills > li > a > .badge, .sticky-footer .menu.footer > li > a > .badge {
+  .nav-pills > li > a > .badge, .sticky-footer .menu.nav > li > a > .badge {
     margin-left: 3px; }
 
 /* line 62, ../bootstrap/stylesheets/bootstrap/_badges.scss */
@@ -8391,20 +8391,20 @@ p:last-child,
 .sticky-footer.container-fluid {
   background-color: #c0392b; }
 /* line 107, ../scss/fxj/_footer.scss */
-.sticky-footer .menu.footer {
+.sticky-footer .menu.nav {
   border: 0;
   float: left;
   margin: 0;
   padding: 0; }
   /* line 114, ../scss/fxj/_footer.scss */
-  .sticky-footer .menu.footer a {
+  .sticky-footer .menu.nav a {
     background-color: #c0392b;
     color: white; }
     /* line 118, ../scss/fxj/_footer.scss */
-    .sticky-footer .menu.footer a:hover, .sticky-footer .menu.footer a:focus {
+    .sticky-footer .menu.nav a:hover, .sticky-footer .menu.nav a:focus {
       text-decoration: underline; }
     /* line 123, ../scss/fxj/_footer.scss */
-    .sticky-footer .menu.footer a svg {
+    .sticky-footer .menu.nav a svg {
       margin-right: 5px; }
 /* line 129, ../scss/fxj/_footer.scss */
 .sticky-footer .block-addtoany {
